<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uart Accessory Test</string>
    <string name="action_settings">Settings</string>

    <string name="accessory_commands">Accessory Commands</string>
    
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    
    <string name="elapsed_time">Elapsed Time</string>
    
    <string name="text_to_send">Text to Send</string>
    <string name="received_text">Received Text</string>
    
    <string name="accessory_on">Accessory ON</string>
    <string name="accessory_off">Accessory OFF</string>
    
    <string name="state_closed">State CLOSED</string>
    <string name="state_wait_permission">State WAIT PERMSISSION</string>
    <string name="state_open">State OPEN</string>
    
    <string name="hello_world">Hello World !</string>
</resources>
